header user/cart css

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <a href="#">Promo</a>
       </nav>
       <input type="text" placeholder="O que procura?" class="searchInput">
-      <a href="#">
-        <img src="assets/images/userIcon.svg" alt="User Icon" class="userIcon">
+      <a href="#" class="headerAlignCenter">
+        <img src="assets/images/userIcon.svg" alt="User Icon" class="headerIcon">
         Entre ou cadastre-se
       </a>
-      <a href="#">
-        <img src="assets/images/cartIcon.svg" alt="Cart Icon" class="cartIcon">00
+      <a href="#" class="headerAlignCenter">
+        <img src="assets/images/cartIcon.svg" alt="Cart Icon" class="headerIcon">00
       </a>
     </div>
   </header>
