--- a/index.html
+++ b/index.html
@@ -100,6 +100,38 @@
     </div>
   </section>
 
+  <section>
+    <div class="categorySection">
+      <div class="coachCategory">
+        <img src="assets/images/coachCategory.webp" alt="Categoria de Sofás">
+        <div class="card">
+          <h2 class="cardTitle">Veja a nossa linha exclusiva de poltronas</h2>
+          <span>Modelos únicos criados por nossos designers</span>
+          <button>veja mais</button>
+        </div>
+      </div>
+
+      <div class="rowCategories">
+        <div class="chairCategory">
+          <img src="assets/images/chairCategory.webp" alt="Categoria de Sofás">
+          <div class="card">
+            <h2 class="cardTitle">Veja a nossa linha exclusiva de <br />cadeiras</h2>
+            <button>veja mais</button>
+          </div>
+        </div>
+
+        <div class="decorationCategory">
+          <img src="assets/images/decorationCategory.webp" alt="Categoria de Sofás">
+          <div class="card">
+            <h2 class="cardTitle">Veja a nossa linha exclusiva de decoração</h2>
+            <button>veja mais</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/swiper.js"></script>
