--- a/index.html
+++ b/index.html
@@ -129,7 +129,59 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section>
+    <div class="swiper mySwiper highlights">
+      <div class="highlightsContainer">
+        <h3 class="highlightsTitle">Novidades em destaque</h3>
+        <hr>
+      </div>
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="assets/images/aparador-buffet.webp" alt="Aparador Buffet">
+          <div class="productDescription">
+            <span class="productTitle">Aparador Buffet</span>
+            <span class="oldPrice"><s>R$ 437,90</s></span>
+            <span class="actualPrice"><strong>R$ 379,99</strong> à vista</span>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/cadeira-presidente.webp" alt="Cadeira Presidente">
+          <div class="productDescription">
+            <span class="productTitle">Cadeira Presidente 04 Rodas</span>
+            <span class="oldPrice"><s>R$ 879,00</s></span>
+            <span class="actualPrice"><strong>R$ 799,99</strong> à vista</span>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/ar-condicionado.webp" alt="Ar Condicionado TCL">
+          <div class="productDescription">
+            <span class="productTitle">Ar Condicionado TCL 12.000BTU</span>
+            <span class="oldPrice"><s>R$ 1799,99</s></span>
+            <span class="actualPrice"><strong>R$ 1499,99</strong> à vista</span>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/freezer-vertical-575l.webp" alt="Freezer Vertical">
+          <div class="productDescription">
+            <span class="productTitle">Freezer Vertical</span>
+            <span class="oldPrice"><s>R$ 2499,99</s></span>
+            <span class="actualPrice"><strong>R$ 2179,99</strong> à vista</span>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="assets/images/jogo-panelas.webp" alt="Jogo de Panelas">
+          <div class="productDescription">
+            <span class="productTitle">Jogo de 05 Panelas</span>
+            <span class="oldPrice"><s>R$ 89,90</s></span>
+            <span class="actualPrice"><strong>R$ 49,99</strong> à vista</span>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
   </section>
 
 
