highlights categories section

--- a/index.html
+++ b/index.html
@@ -184,6 +184,72 @@
     </div>
   </section>
 
+  <section>
+    <div class="highlightsCategories">
+      <div class="highlightsContainer">
+        <h3 class="highlightsTitle">Categorias em destaque</h3>
+        <hr>
+      </div>
+
+      <div class="rowHighlightsCategories">
+        <div class="majorCard">
+          <h4 class="cardTitle">sofás</h4>
+          <img src="assets/images/couch.webp" alt="Sofá" class="couchImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+
+        <div class="minorCard">
+          <h4 class="cardTitle">workstation</h4>
+          <img src="assets/images/workstation.webp" alt="Workstation" class="workstationImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+
+        <div class="minorCard">
+          <h4 class="cardTitle">racks</h4>
+          <img src="assets/images/rack.webp" alt="Workstation" class="rackImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="rowHighlightsCategories">
+        <div class="minorCard">
+          <h4 class="cardTitle">smartphones</h4>
+          <img src="assets/images/smartphone.webp" alt="Workstation" class="smartphoneImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+
+        <div class="minorCard">
+          <h4 class="cardTitle">decoração</h4>
+          <img src="assets/images/decoration.webp" alt="Workstation" class="decorationImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+
+        <div class="majorCard">
+          <h4 class="cardTitle">iluminação</h4>
+          <img src="assets/images/softBoxLight.webp" alt="Sofá" class="lightImg">
+          <div class="cardDescription">
+            <div class="cardPlus">+</div>
+            <a href="#" class="cardLink">veja mais</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/swiper.js"></script>
